# rag-app-ask-my-docs

./: .gitignore  JOURNEY.md  README.md  main.py  pipeline.py  pyproject.toml
app/: app.py
evaluation/: eval_results.csv  evaluate.py  ragas_results.csv
generation/: classifier.py  generator.py
ingestion/: ingest.py
reranking/: reranker.py
retrieval/: retriever.py
